Launch SBT as per recommended JVM settings